volexc/tests/ui/check_duplicate_enum_index.out
Error: duplicate index 1 in enum `Foo`
   ╭─[check_duplicate_enum_index.vol:3:11]
   │
 3 │     Bar = 1
   │           ┬  
   │           ╰── first used here
 4 │     Baz = 1
   │           ┬  
   │           ╰── reused here
───╯