volexc/tests/ui/check_duplicate_enum_index.vol
// Duplicate variant index in enum
enum Foo {
    Bar = 1
    Baz = 1
}
